# enterprise-knowledge-base

./: .gitignore  EDITORIAL_PLAN.md  LICENSE  README.md  mkdocs.yml  open-knowledge-systems.epub  pyproject.toml  requirements.txt
.github/workflows/: build-docs.yml
content/: 01_introduction.md  02_overall_description.md  03_requirements.md  04_authoring_etl.md  04_graph_modeling_neo4j.md  05_graph_modeling_neo4j.md  06_publication.md  06_storage_retrieval.md  07_validation.md  08_publication.md  98_appendix.md  99_future_work.md  enterprise-knowledge-srs.md  index.md
content/notebooks/: demo_author_etl.ipynb
graphs/: demo_queries.ipynb  schema.cypher
hooks/: mkdocs_compat.py
notebooks/: demo_author_etl.ipynb
scripts/: build.sh  weasyprint.sh
src/oks/: __init__.py  etl.py
tests/: test_etl.py  test_mkdocs_compat.py
